--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-24 02:45 -->
+<!-- 2022-11-25 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc4d6511">1. 妙妙文章</a>
+<li><a href="#orgd33db91">1. 妙妙文章</a>
 <ul>
-<li><a href="#orge40edb0">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgbaad9bf">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org9151a93">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orga974684">1.4. 关于编辑器</a></li>
-<li><a href="#org96c536d">1.5. 关于代码</a>
+<li><a href="#org0d11546">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgba29dde">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org698da24">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org94adb07">1.4. 关于编辑器</a></li>
+<li><a href="#org6037b04">1.5. 关于代码</a>
 <ul>
-<li><a href="#org0e98f10">1.5.1. Lisp</a></li>
+<li><a href="#org2118aae">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org6f33ce9">1.6. 关于CPU</a></li>
-<li><a href="#org0a2e0b5">1.7. 关于算法</a>
+<li><a href="#orgc47249c">1.6. 关于CPU</a></li>
+<li><a href="#org9ff483e">1.7. 关于算法</a>
 <ul>
-<li><a href="#org29a7079">1.7.1. 关于随机</a></li>
+<li><a href="#org2293dd3">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org31efb7b">1.8. 关于AI</a></li>
-<li><a href="#org287aa38">1.9. 关于软件</a>
+<li><a href="#orgafcec93">1.8. 关于AI</a></li>
+<li><a href="#org73ca36a">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgca9cce4">1.9.1. SQLite</a></li>
+<li><a href="#orgafd3e96">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgee67c31">1.10. 关于workflow</a></li>
+<li><a href="#org408c8d2">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org843d6bf">2. 棒棒视频</a>
+<li><a href="#org0ce4817">2. 棒棒视频</a>
 <ul>
-<li><a href="#orge363985">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org0f2768b">2.2. 各种剧</a></li>
-<li><a href="#org81acd0a">2.3. 电影</a></li>
+<li><a href="#org2718c77">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org465453e">2.2. 各种剧</a></li>
+<li><a href="#orgb62b748">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org331936c">3. 快乐游戏</a></li>
-<li><a href="#org2f095df">4. 宝藏博主</a></li>
-<li><a href="#org7ecc17f">5. 有意思的</a>
+<li><a href="#org6d6098a">3. 快乐游戏</a></li>
+<li><a href="#org1d32899">4. 宝藏博主</a></li>
+<li><a href="#org3eb1a6a">5. 有意思的</a>
 <ul>
-<li><a href="#orga27c52e">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org915db80">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org45c3c02">6. 我想玩的</a></li>
+<li><a href="#org1c734ec">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgc4d6511" class="outline-2">
-<h2 id="orgc4d6511"><span class="section-number-2">1.</span> <a href="#orgc4d6511">妙妙文章</a></h2>
+<div id="outline-container-orgd33db91" class="outline-2">
+<h2 id="orgd33db91"><span class="section-number-2">1.</span> <a href="#orgd33db91">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org550a247">
+<figure id="org7d87d12">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orge40edb0" class="outline-3">
-<h3 id="orge40edb0"><span class="section-number-3">1.1.</span> <a href="#orge40edb0">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org0d11546" class="outline-3">
+<h3 id="org0d11546"><span class="section-number-3">1.1.</span> <a href="#org0d11546">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgbaad9bf" class="outline-3">
-<h3 id="orgbaad9bf"><span class="section-number-3">1.2.</span> <a href="#orgbaad9bf">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgba29dde" class="outline-3">
+<h3 id="orgba29dde"><span class="section-number-3">1.2.</span> <a href="#orgba29dde">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org9151a93" class="outline-3">
-<h3 id="org9151a93"><span class="section-number-3">1.3.</span> <a href="#org9151a93">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org698da24" class="outline-3">
+<h3 id="org698da24"><span class="section-number-3">1.3.</span> <a href="#org698da24">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orga974684" class="outline-3">
-<h3 id="orga974684"><span class="section-number-3">1.4.</span> <a href="#orga974684">关于编辑器</a></h3>
+<div id="outline-container-org94adb07" class="outline-3">
+<h3 id="org94adb07"><span class="section-number-3">1.4.</span> <a href="#org94adb07">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org96c536d" class="outline-3">
-<h3 id="org96c536d"><span class="section-number-3">1.5.</span> <a href="#org96c536d">关于代码</a></h3>
+<div id="outline-container-org6037b04" class="outline-3">
+<h3 id="org6037b04"><span class="section-number-3">1.5.</span> <a href="#org6037b04">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org0e98f10" class="outline-4">
-<h4 id="org0e98f10"><span class="section-number-4">1.5.1.</span> <a href="#org0e98f10">Lisp</a></h4>
+<div id="outline-container-org2118aae" class="outline-4">
+<h4 id="org2118aae"><span class="section-number-4">1.5.1.</span> <a href="#org2118aae">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org6f33ce9" class="outline-3">
-<h3 id="org6f33ce9"><span class="section-number-3">1.6.</span> <a href="#org6f33ce9">关于CPU</a></h3>
+<div id="outline-container-orgc47249c" class="outline-3">
+<h3 id="orgc47249c"><span class="section-number-3">1.6.</span> <a href="#orgc47249c">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org0a2e0b5" class="outline-3">
-<h3 id="org0a2e0b5"><span class="section-number-3">1.7.</span> <a href="#org0a2e0b5">关于算法</a></h3>
+<div id="outline-container-org9ff483e" class="outline-3">
+<h3 id="org9ff483e"><span class="section-number-3">1.7.</span> <a href="#org9ff483e">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org29a7079" class="outline-4">
-<h4 id="org29a7079"><span class="section-number-4">1.7.1.</span> <a href="#org29a7079">关于随机</a></h4>
+<div id="outline-container-org2293dd3" class="outline-4">
+<h4 id="org2293dd3"><span class="section-number-4">1.7.1.</span> <a href="#org2293dd3">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org31efb7b" class="outline-3">
-<h3 id="org31efb7b"><span class="section-number-3">1.8.</span> <a href="#org31efb7b">关于AI</a></h3>
+<div id="outline-container-orgafcec93" class="outline-3">
+<h3 id="orgafcec93"><span class="section-number-3">1.8.</span> <a href="#orgafcec93">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org287aa38" class="outline-3">
-<h3 id="org287aa38"><span class="section-number-3">1.9.</span> <a href="#org287aa38">关于软件</a></h3>
+<div id="outline-container-org73ca36a" class="outline-3">
+<h3 id="org73ca36a"><span class="section-number-3">1.9.</span> <a href="#org73ca36a">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgca9cce4" class="outline-4">
-<h4 id="orgca9cce4"><span class="section-number-4">1.9.1.</span> <a href="#orgca9cce4">SQLite</a></h4>
+<div id="outline-container-orgafd3e96" class="outline-4">
+<h4 id="orgafd3e96"><span class="section-number-4">1.9.1.</span> <a href="#orgafd3e96">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgee67c31" class="outline-3">
-<h3 id="orgee67c31"><span class="section-number-3">1.10.</span> <a href="#orgee67c31">关于workflow</a></h3>
+<div id="outline-container-org408c8d2" class="outline-3">
+<h3 id="org408c8d2"><span class="section-number-3">1.10.</span> <a href="#org408c8d2">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org843d6bf" class="outline-2">
-<h2 id="org843d6bf"><span class="section-number-2">2.</span> <a href="#org843d6bf">棒棒视频</a></h2>
+<div id="outline-container-org0ce4817" class="outline-2">
+<h2 id="org0ce4817"><span class="section-number-2">2.</span> <a href="#org0ce4817">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orge363985" class="outline-3">
-<h3 id="orge363985"><span class="section-number-3">2.1.</span> <a href="#orge363985">Veritasium 真理元素</a></h3>
+<div id="outline-container-org2718c77" class="outline-3">
+<h3 id="org2718c77"><span class="section-number-3">2.1.</span> <a href="#org2718c77">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -864,8 +864,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0f2768b" class="outline-3">
-<h3 id="org0f2768b"><span class="section-number-3">2.2.</span> <a href="#org0f2768b">各种剧</a></h3>
+<div id="outline-container-org465453e" class="outline-3">
+<h3 id="org465453e"><span class="section-number-3">2.2.</span> <a href="#org465453e">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -889,8 +889,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org81acd0a" class="outline-3">
-<h3 id="org81acd0a"><span class="section-number-3">2.3.</span> <a href="#org81acd0a">电影</a></h3>
+<div id="outline-container-orgb62b748" class="outline-3">
+<h3 id="orgb62b748"><span class="section-number-3">2.3.</span> <a href="#orgb62b748">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -916,7 +916,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orged2127c">
+<figure id="orgffcd4f5">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -933,8 +933,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org331936c" class="outline-2">
-<h2 id="org331936c"><span class="section-number-2">3.</span> <a href="#org331936c">快乐游戏</a></h2>
+<div id="outline-container-org6d6098a" class="outline-2">
+<h2 id="org6d6098a"><span class="section-number-2">3.</span> <a href="#org6d6098a">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -964,8 +964,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2f095df" class="outline-2">
-<h2 id="org2f095df"><span class="section-number-2">4.</span> <a href="#org2f095df">宝藏博主</a></h2>
+<div id="outline-container-org1d32899" class="outline-2">
+<h2 id="org1d32899"><span class="section-number-2">4.</span> <a href="#org1d32899">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -976,7 +976,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org0a01328">
+<figure id="org31651ab">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -984,8 +984,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7ecc17f" class="outline-2">
-<h2 id="org7ecc17f"><span class="section-number-2">5.</span> <a href="#org7ecc17f">有意思的</a></h2>
+<div id="outline-container-org3eb1a6a" class="outline-2">
+<h2 id="org3eb1a6a"><span class="section-number-2">5.</span> <a href="#org3eb1a6a">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1017,8 +1017,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga27c52e" class="outline-3">
-<h3 id="orga27c52e"><span class="section-number-3">5.1.</span> <a href="#orga27c52e">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org915db80" class="outline-3">
+<h3 id="org915db80"><span class="section-number-3">5.1.</span> <a href="#org915db80">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1030,8 +1030,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org45c3c02" class="outline-2">
-<h2 id="org45c3c02"><span class="section-number-2">6.</span> <a href="#org45c3c02">我想玩的</a></h2>
+<div id="outline-container-org1c734ec" class="outline-2">
+<h2 id="org1c734ec"><span class="section-number-2">6.</span> <a href="#org1c734ec">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1054,7 +1054,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-21 18:05</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-24 02:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-25 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
