--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-25 02:45 -->
+<!-- 2022-11-26 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9f351ba">1. 暑假</a>
+<li><a href="#org88fe91d">1. 暑假</a>
 <ul>
-<li><a href="#orgcef7fd4">1.1. 夏令营</a></li>
+<li><a href="#org3ee2159">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgdb4f2ae">2. 打工</a></li>
-<li><a href="#org7c95f2b">3. 我的928</a>
+<li><a href="#org3814e7c">2. 打工</a></li>
+<li><a href="#org625254c">3. 我的928</a>
 <ul>
-<li><a href="#orgb8edf48">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org9239e1e">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orge565d3f">4. 他们的928</a></li>
-<li><a href="#orgfe2ad50">5. 总结</a></li>
+<li><a href="#orgd1e9f7c">4. 他们的928</a></li>
+<li><a href="#org503600b">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org3b3ae78">
+<figure id="orgc5943ec">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org9f351ba" class="outline-2">
-<h2 id="org9f351ba"><span class="section-number-2">1.</span> <a href="#org9f351ba">暑假</a></h2>
+<div id="outline-container-org88fe91d" class="outline-2">
+<h2 id="org88fe91d"><span class="section-number-2">1.</span> <a href="#org88fe91d">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgcef7fd4" class="outline-3">
-<h3 id="orgcef7fd4"><span class="section-number-3">1.1.</span> <a href="#orgcef7fd4">夏令营</a></h3>
+<div id="outline-container-org3ee2159" class="outline-3">
+<h3 id="org3ee2159"><span class="section-number-3">1.1.</span> <a href="#org3ee2159">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgdb4f2ae" class="outline-2">
-<h2 id="orgdb4f2ae"><span class="section-number-2">2.</span> <a href="#orgdb4f2ae">打工</a></h2>
+<div id="outline-container-org3814e7c" class="outline-2">
+<h2 id="org3814e7c"><span class="section-number-2">2.</span> <a href="#org3814e7c">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org7c95f2b" class="outline-2">
-<h2 id="org7c95f2b"><span class="section-number-2">3.</span> <a href="#org7c95f2b">我的928</a></h2>
+<div id="outline-container-org625254c" class="outline-2">
+<h2 id="org625254c"><span class="section-number-2">3.</span> <a href="#org625254c">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgb8edf48" class="outline-3">
-<h3 id="orgb8edf48"><span class="section-number-3">3.1.</span> <a href="#orgb8edf48">928演唱会(bushi</a></h3>
+<div id="outline-container-org9239e1e" class="outline-3">
+<h3 id="org9239e1e"><span class="section-number-3">3.1.</span> <a href="#org9239e1e">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org0555f9a">
+<figure id="org730f679">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgad9be71">
+<figure id="orgaed17ab">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge565d3f" class="outline-2">
-<h2 id="orge565d3f"><span class="section-number-2">4.</span> <a href="#orge565d3f">他们的928</a></h2>
+<div id="outline-container-orgd1e9f7c" class="outline-2">
+<h2 id="orgd1e9f7c"><span class="section-number-2">4.</span> <a href="#orgd1e9f7c">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgfe2ad50" class="outline-2">
-<h2 id="orgfe2ad50"><span class="section-number-2">5.</span> <a href="#orgfe2ad50">总结</a></h2>
+<div id="outline-container-org503600b" class="outline-2">
+<h2 id="org503600b"><span class="section-number-2">5.</span> <a href="#org503600b">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-25 02:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
